checked link with gh pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="normalize.css">
 </head>
+
 <body>
   <header>
 
@@ -17,24 +19,48 @@
 
   </nav>
 
-<main>
-<section class="top-image">
+  <main>
+    <section class="top-image">
 
-</section>
-<section class="skate-article">
-<article class="tony-hawk">
+    </section>
+    <section class="skate-article">
+      <article class="tony-hawk">
 
-</article>
-</section>
-<section class="skaters">
+      </article>
+      <article class="rodney-mullan">
 
-</section>
-<section class="skateboards">
+      </article>
+      <article class="ray-barbee">
 
-</section>
-<section class="contact-box">
+      </article>
+    </section>
+    <section class="skaters">
+      <article class="lance-mountain">
 
-</section>
-</main>
+      </article>
+      <article class="rodney-mullan-img">
+
+      </article>
+      <article class="tommy-guerrero">
+
+      </article>
+      <article class="steve-caballero">
+
+      </article>
+    </section>
+
+    <section class="skateboards">
+
+    </section>
+    <section class="contact-box">
+
+      <aside class="contact-us">
+
+
+      </aside>
+      <form action=""></form>
+    </section>
+  </main>
 </body>
+
 </html>
