--- a/index.html
+++ b/index.html
@@ -15,52 +15,102 @@
   <header>
 
   </header>
-  <nav>
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col">- SK8T NEWS -</div>
+          <div class="col">- SKATEBOARDERS -</div>
+          <div class="col">- BOARD DESIGN -</div>
+          <div class="col">- CONTACT US -</div>
+        </div>
+      </div>
+    </nav>
 
-  </nav>
+    <main>
+      <section class="top-image">
+        <div class="top-image-container">
 
-  <main>
-    <section class="top-image">
+        </div>
+      </section>
+      <section class="skate-article">
+        <div class="container">
+        <div class="row">
+            <div class="col">
+              <h1>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
+            </div>
+            <div class="col">
+              <h1>Rodney Mullan: Pop and ollie and innovate! (TED Talk)
+              </h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
+            </div>
+            <div class="col">
+              <h1>Ray Barbee Talks 'Ban This'</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skaters">
+        <article class="lance-mountain">
 
-    </section>
-    <section class="skate-article">
-      <article class="tony-hawk">
+        </article>
+        <article class="rodney-mullan-img">
 
-      </article>
-      <article class="rodney-mullan">
+        </article>
+        <article class="tommy-guerrero">
 
-      </article>
-      <article class="ray-barbee">
+        </article>
+        <article class="steve-caballero">
 
-      </article>
-    </section>
-    <section class="skaters">
-      <article class="lance-mountain">
+        </article>
+      </section>
 
-      </article>
-      <article class="rodney-mullan-img">
+      <!-- <section class="skateboards">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="images/sk8-1.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-2.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-3.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-4.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-5.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-6.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-7.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-8.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-9.png" alt="">
+          </div>
+          <div class="col">
+            <img src="images/sk8-10.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section> -->
+      <section class="contact-box">
 
-      </article>
-      <article class="tommy-guerrero">
-
-      </article>
-      <article class="steve-caballero">
-
-      </article>
-    </section>
-
-    <section class="skateboards">
-
-    </section>
-    <section class="contact-box">
-
-      <aside class="contact-us">
+        <aside class="contact-us">
 
 
-      </aside>
-      <form action=""></form>
-    </section>
-  </main>
+        </aside>
+        <form action=""></form>
+      </section>
+    </main>
 </body>
 
 </html>
