--- a/index.html
+++ b/index.html
@@ -15,102 +15,136 @@
   <header>
 
   </header>
-    <nav>
-      <div class="container">
-        <div class="row">
-          <div class="col">- SK8T NEWS -</div>
-          <div class="col">- SKATEBOARDERS -</div>
-          <div class="col">- BOARD DESIGN -</div>
-          <div class="col">- CONTACT US -</div>
-        </div>
+  <nav>
+    <div class="container">
+      <div class="row">
+        <div class="col">- SK8T NEWS -</div>
+        <div class="col">- SKATEBOARDERS -</div>
+        <div class="col">- BOARD DESIGN -</div>
+        <div class="col">- CONTACT US -</div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <main>
-      <section class="top-image">
-        <div class="top-image-container">
+  <main>
+    <section class="top-image">
+      <div class="top-image-container">
 
-        </div>
-      </section>
-      <section class="skate-article">
-        <div class="container">
-        <div class="row">
-            <div class="col">
-              <h1>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
-            </div>
-            <div class="col">
-              <h1>Rodney Mullan: Pop and ollie and innovate! (TED Talk)
-              </h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
-            </div>
-            <div class="col">
-              <h1>Ray Barbee Talks 'Ban This'</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="skaters">
-        <article class="lance-mountain">
-
-        </article>
-        <article class="rodney-mullan-img">
-
-        </article>
-        <article class="tommy-guerrero">
-
-        </article>
-        <article class="steve-caballero">
-
-        </article>
-      </section>
-
-      <!-- <section class="skateboards">
+      </div>
+    </section>
+    <section class="skate-article">
       <div class="container">
         <div class="row">
           <div class="col">
-            <img src="images/sk8-1.png" alt="">
+            <h1>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
           </div>
           <div class="col">
-            <img src="images/sk8-2.png" alt="">
+            <h1>Rodney Mullan: Pop and ollie and innovate! (TED Talk)
+            </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
           </div>
           <div class="col">
-            <img src="images/sk8-3.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-4.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-5.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-6.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-7.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-8.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-9.png" alt="">
-          </div>
-          <div class="col">
-            <img src="images/sk8-10.png" alt="">
+            <h1>Ray Barbee Talks 'Ban This'</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
           </div>
         </div>
       </div>
-    </section> -->
-      <section class="contact-box">
+    </section>
+    <div class="container">
+      <div class="row">
+        <div class="col-4 lance-mountain">
+          1 of 3
+        </div>
+        <div class="col-4 rodney-mullan-img">
+          2 of 3
+        </div>
+        </div>
+          <div class="row">
+            <div class="col-8 steve-caballero">
+              3 of 3
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <aside class="contact-us">
+
+    </section>
+    <section class="skateboards">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="images/sk8-1.png">
+            <img src="images/sk8-2.png">
+            <img src="images/sk8-3.png">
+            <img src="images/sk8-4.png">
+            <img src="images/sk8-5.png">
+            <img src="images/sk8-6.png">
+            <img src="images/sk8-7.png">
+            <img src="images/sk8-8.png">
+            <img src="images/sk8-9.png">
+            <img src="images/sk8-10.png">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="skateboards">
+      <div class="container">
+        <div class="row">
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+          <div class="skateboard">
+            <img src="images/sk8-1.png">
+
+          </div>
+        </div>
+      </div>
+  </section> -->
+    <section class="contact-box">
+
+      <aside class="contact-us">
 
 
-        </aside>
-        <form action=""></form>
-      </section>
-    </main>
+      </aside>
+      <form action="">
+
+      </form>
+    </section>
+  </main>
 </body>
 
 </html>
