created basic structure of webpage

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Power Peralta</title>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="normalize.css">
+  <script src="https://kit.fontawesome.com/6888ed7247.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
   <header>
-
+    <ul>
+      <li><i class="fas fa-ellipsis-v"></i></li>
+      <li><i  style="color: #475993;"class="fab fa-facebook-square"></i></li>
+      <li><i style="color: #C49045;"class="fas fa-rss-square"></i></li>
+      <li><i style="color: #708DC2;"class="fab fa-twitter-square"></i></li>
+      <li><i style="color: #A54134;"class="fab fa-youtube-square"></i></li>
+    </ul>
   </header>
   <nav>
     <div class="container">
@@ -54,15 +64,15 @@
     <div class="container">
       <div class="row">
         <div class="col-4 lance-mountain">
-          1 of 3
+        LANCE MOUNTAIN
         </div>
         <div class="col-4 rodney-mullan-img">
-          2 of 3
+          RODNEY MULLAN
         </div>
         </div>
           <div class="row">
             <div class="col-8 steve-caballero">
-              3 of 3
+              STEVE CABALLERO
             </div>
           </div>
         </div>
@@ -74,75 +84,20 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <img src="images/sk8-1.png">
-            <img src="images/sk8-2.png">
-            <img src="images/sk8-3.png">
-            <img src="images/sk8-4.png">
-            <img src="images/sk8-5.png">
-            <img src="images/sk8-6.png">
-            <img src="images/sk8-7.png">
-            <img src="images/sk8-8.png">
-            <img src="images/sk8-9.png">
-            <img src="images/sk8-10.png">
           </div>
         </div>
       </div>
     </section>
 
-    <!-- <section class="skateboards">
-      <div class="container">
-        <div class="row">
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-          <div class="skateboard">
-            <img src="images/sk8-1.png">
-
-          </div>
-        </div>
-      </div>
-  </section> -->
     <section class="contact-box">
-
-      <aside class="contact-us">
-
-
-      </aside>
-      <form action="">
-
-      </form>
+      <article>
+            <h2>Contact Us for More Information</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse rem, corporis nemo. Ducimus quibusdam repellat, odit. Excepturi nemo minima perspiciatis in, aliquam rem quia reprehenderit vel blanditiis voluptate, explicabo eaque.</p>
+          </article>
+          <aside><form action="/action_page.php"><div>
+Name: <input type="text" name="Name" placeholder="Name"></div><div>
+Email: <input type="text" name="Email" placeholder="Email"></div>Message<input style="height: 100px;" type="text" name="Your Message" placeholder="Your Message"> <input type="submit" value="Submit"></div>
+</aside>
     </section>
   </main>
 </body>
