added skateboard images and adjusted margining at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
 </head>
 
 <body>
+  <div class="container">
   <header>
     <ul>
       <li><i class="fas fa-ellipsis-v"></i></li>
-      <li><i  style="color: #475993;"class="fab fa-facebook-square"></i></li>
-      <li><i style="color: #C49045;"class="fas fa-rss-square"></i></li>
-      <li><i style="color: #708DC2;"class="fab fa-twitter-square"></i></li>
-      <li><i style="color: #A54134;"class="fab fa-youtube-square"></i></li>
+      <li><i style="color: #475993;" class="fab fa-facebook-square"></i></li>
+      <li><i style="color: #C49045;" class="fas fa-rss-square"></i></li>
+      <li><i style="color: #708DC2;" class="fab fa-twitter-square"></i></li>
+      <li><i style="color: #A54134;" class="fab fa-youtube-square"></i></li>
     </ul>
   </header>
   <nav>
-    <div class="container">
+
       <div class="row">
         <div class="col">- SK8T NEWS -</div>
         <div class="col">- SKATEBOARDERS -</div>
         <div class="col">- BOARD DESIGN -</div>
         <div class="col">- CONTACT US -</div>
       </div>
-    </div>
+
   </nav>
 
   <main>
@@ -43,7 +44,6 @@
       </div>
     </section>
     <section class="skate-article">
-      <div class="container">
         <div class="row">
           <div class="col">
             <h1>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h1>
@@ -59,47 +59,78 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, itaque nihil harum, iusto sint aperiam quaerat doloremque alias eum quo obcaecati delectus laboriosam. Doloribus, ex, hic itaque libero aperiam repellendus!</p>
           </div>
         </div>
-      </div>
+
     </section>
-    <div class="container">
+
       <div class="row">
-        <div class="col-4 lance-mountain">
-        LANCE MOUNTAIN
-        </div>
-        <div class="col-4 rodney-mullan-img">
-          RODNEY MULLAN
-        </div>
-        </div>
-          <div class="row">
-            <div class="col-8 steve-caballero">
-              STEVE CABALLERO
-            </div>
-          </div>
-        </div>
+      <div class="col lance-img">
       </div>
+      <div class="col rodney-img">
+      </div>
+      <div class="col tommy-img">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-8 steve-img">
+      </div>
+    </div>
+
 
 
     </section>
-    <section class="skateboards">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-          </div>
-        </div>
-      </div>
+
+    <div class="row ">
+       <div class="col skateboards">
+         <img src="images/sk8-1.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-2.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-3.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-4.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-5.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-6.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-7.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-8.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-9.png">
+       </div>
+       <div class="col skateboards">
+         <img src="images/sk8-10.png">
+       </div>
+       </div>
+     </div>
+
     </section>
 
     <section class="contact-box">
       <article>
-            <h2>Contact Us for More Information</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse rem, corporis nemo. Ducimus quibusdam repellat, odit. Excepturi nemo minima perspiciatis in, aliquam rem quia reprehenderit vel blanditiis voluptate, explicabo eaque.</p>
-          </article>
-          <aside><form action="/action_page.php"><div>
-Name: <input type="text" name="Name" placeholder="Name"></div><div>
-Email: <input type="text" name="Email" placeholder="Email"></div>Message<input style="height: 100px;" type="text" name="Your Message" placeholder="Your Message"> <input type="submit" value="Submit"></div>
-</aside>
+        <h2>Contact Us for More Information</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse rem, corporis nemo. Ducimus quibusdam repellat, odit. Excepturi nemo minima perspiciatis in, aliquam rem quia reprehenderit vel blanditiis voluptate, explicabo eaque.</p>
+      </article>
+      <aside>
+        <form action="/action_page.php">
+          <div><input type="text" name="Name" placeholder="Name"></div>
+          <div><input type="text" name="Email" placeholder="Email"></div><input style="height: 70px;" type="text" name="Your Message" placeholder="Your Message"> <br>
+          <br><input type="button" value="submit">
+
+      </aside>
     </section>
   </main>
+</div>
 </body>
 
 </html>
