fixed skateboarders and skateboard

--- a/index.html
+++ b/index.html
@@ -61,58 +61,58 @@
         </div>
 
     </section>
-
-      <div class="row">
-      <div class="col lance-img">
-      </div>
-      <div class="col rodney-img">
-      </div>
-      <div class="col tommy-img">
-      </div>
+<section>
+      <div class="skateboarders row no-gutters">
+        <div class="col-8">
+        <div class="row no-gutters">
+      <div class="col-6 lance-img"></div>
+      <div class="col-6 rodney-img"></div>
+      <div class="col-12 steve-img"></div>
     </div>
 
-    <div class="row">
-      <div class="col-8 steve-img">
+</div>
+      <div class="col-4 tommy-img">
       </div>
     </div>
 
 
 
     </section>
-
-    <div class="row ">
-       <div class="col skateboards">
+<section>
+  
+    <div class="skateboards row no-gutters">
+       <div class="col">
          <img src="images/sk8-1.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-2.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-3.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-4.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-5.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-6.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-7.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-8.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-9.png">
        </div>
-       <div class="col skateboards">
+       <div class="col">
          <img src="images/sk8-10.png">
        </div>
        </div>
-     </div>
+
 
     </section>
 
