made skateboarders and skateboards mobile compatible

--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
             <div class="row">
               <div class="col-md-6 lance-img">
                 <img src="images/sk8er-4.png">
-                <span class="skateboarder-name">LANCE MOUNTAIN</span></div>
+                <span id="skateboarder-name-l">LANCE MOUNTAIN</span></div>
               <div class="col-md-6 rodney-img">
                 <img src="images/sk8er-3.png">
-                <span class="skateboarder-name">RODNEY MULLAN</span></div>
+                <span id="skateboarder-name-r">RODNEY MULLAN</span></div>
               <div class="col-md-12 steve-img">
                 <img src="images/sk8er-1.png">
-                <span class="skateboarder-name">STEVE CABALLERO</span></div>
+                <span id="skateboarder-name-s">STEVE CABALLERO</span></div>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="tommy-img">
               <img src="images/sk8er-2.png">
-              <span class="skateboarder-name">TOMMY GUERRERO</span></div>
+              <span id="skateboarder-name-t">TOMMY GUERRERO</span></div>
           </div>
         </div>
 
@@ -109,34 +109,34 @@
         <div class="skateboards row no-gutters">
 
           <div class="col-12 col-md">
-            <img src="images/sk8-1.png">
+            <img id="sk8" src="images/sk8-1.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-2.png">
+            <img id="sk8" src="images/sk8-2.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-3.png">
+            <img id="sk8" src="images/sk8-3.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-4.png">
+            <img id="sk8" src="images/sk8-4.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-5.png">
+            <img id="sk8" src="images/sk8-5.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-6.png">
+            <img id="sk8" src="images/sk8-6.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-7.png">
+            <img id="sk8" src="images/sk8-7.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-8.png">
+            <img id="sk8" src="images/sk8-8.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-9.png">
+            <img id="sk8" src="images/sk8-9.png">
           </div>
           <div class="col-12 col-md">
-            <img src="images/sk8-10.png">
+            <img id="sk8" src="images/sk8-10.png">
           </div>
 
 
