adjusted social media header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header col-12">
           <div class="row no-gutters">
             <div class="col-6"></div>
-            <div class="subscribe col-2">SUBSCRIBE<a href="#"><i class="fas fa-circle"></i></a></div>
+            <div class="subscribe col-2"><a href="#">SUBSCRIBE</a></div>
             <div class="justify-content-end icons-social col-4">
               <i style="color: #475993;" class="fab fa-facebook-square"></i>
               <i style="color: #C49045;" class="fas fa-rss-square"></i>
