added box shadowing and fixed contact box

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="form-left col-6">
       <h2 class="form-heading">Contact Us for More Information
       </h2>
-      <div class="form-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est esse ab aut maiores, nobis explicabo ipsam non recusandae inventore consequuntur blanditiis! Hic voluptatum quasi a repudiandae quam ipsam modi sit.
+      <div class="form-body"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est esse ab aut maiores, nobis explicabo ipsam non recusandae inventore consequuntur blanditiis! Hic voluptatum quasi a repudiandae quam ipsam modi sit.</p>
       </div>
     </div>
     <div class="form-right col-6">
@@ -159,7 +159,7 @@
         <div class="form-group">
           <input type="text" name="Email" placeholder=" EMAIL">
         </div>
-        <div class="form-group"><input style="height: 70px;" type="text" name="Your Message" placeholder=" YOUR MESSAGE">
+        <div class="form-group" id="your-message"><input type="text" name="Your Message" placeholder=" YOUR MESSAGE">
         </div>
         <button class="submit" type="submit" value="submit">Submit</button>
       </form>
